fixed whitespace on right side, changed px to vw

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -16,6 +16,15 @@
 }
 /*FontFace*/
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*header*/
 /*announcement starts*/
 .bold-font {
