--- a/static/css/gift.css
+++ b/static/css/gift.css
@@ -15,6 +15,15 @@
     font-style: normal;
   }
   /*FontFace*/
+
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
   
   /*announcement starts*/
   .bold-font {
