--- a/static/css/trade.css
+++ b/static/css/trade.css
@@ -16,6 +16,15 @@
 }
 /*FontFace*/
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*announcement starts*/
 .bold-font {
   font-weight: 700;
